add_subdirectory(basicsprites)
add_subdirectory(basicsprites_lua)
add_subdirectory(fontrendering)
add_subdirectory(testbed)
add_subdirectory(imgui_demo)
add_subdirectory(reactphysics3d)
add_subdirectory(animation)
add_subdirectory(manual_skeleton)
add_subdirectory(vr_head_tracking)
add_subdirectory(vr_hand)
